add index.html file

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     /* navigation menu */
         nav {
             background-image: url("https://pa1.narvii.com/6582/8543bcb00f9adc2b59b0a5b6b1e3dfc002cba462_00.gif");
-            margin: 0 auto;
+            margin: 10 auto;
             margin-bottom: 20px;
             display: flex;
             padding: 10px;
@@ -44,7 +44,6 @@
     /* main container area beneath menu */
     main {
         background-image: url("https://pa1.narvii.com/6582/8543bcb00f9adc2b59b0a5b6b1e3dfc002cba462_00.gif");
-        
         display: flex;
     }
     .sidebar {
@@ -54,8 +53,6 @@
     .sidebar-img {
         width: 200px;
         border: 8px silver ridge;
-        position: absolute;
-        left: 30%;
     }
     .sidebar-img-2 {
         width: 158px;
@@ -68,6 +65,7 @@
     #interests {
         border: 8px silver ridge;
         padding: 8px;
+        margin-bottom: 250px;
     }
     h2, h3 {
         margin: 0px;
