add portfolio.html file

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     #interests {
         border: 8px silver ridge;
         padding: 8px;
-        margin-bottom: 250px;
+        margin-bottom: 600px;
     }
     h2, h3 {
         margin: 0px;
@@ -112,7 +112,7 @@
                                 <li>bucket soup</li>
                                 <li>monkeys</li>
                             </ul>
-                        <div>
+                        </div>
                 </div>
             </main>
         </div>
