add portfolio.html file

--- a/portfolio.html
+++ b/portfolio.html
@@ -25,6 +25,7 @@
                 margin: 0 auto;
                 display: flex;
                 padding: 10px;
+                border-radius: 25px;
             }
             h1 {
                 display: flex;
@@ -52,6 +53,7 @@
             .content {
                 flex: 1;
                 padding: 15px;
+                margin-bottom: 200px;
             }
             /* portfolio styles */
             .content h1 {
